# BiteMate

./: .env.example  ORCHESTRATOR_GUIDE.md  POSTGRESQL_FIX.md  README.md  RUN_WEB_APP.md  TESTING.md  UNIFIED_WORKFLOW.md  api.py  app.py  experiements.ipynb  main.py  pyproject.toml  requirements.txt
frontend/: app.py
src/bitemate/agents/: consolidated_meal_generator.py  consolidated_user_profiler.py  main_agent.py  main_agents.py  meal_generator.py  meal_planner_agent.py  orchestrator.py  router_agent.py  temp_agent.py  temp_run_session.py  temp_user_profile_agent.py  temp_user_profiler.py  user_profiler_agent.py
src/bitemate/api/: api.py
src/bitemate/config/: params.yaml
src/bitemate/core/: exception.py
src/bitemate/db/: pinecone_memory_db.py  postgre_db.py
src/bitemate/prompts/: generate_meal_prompt.txt  meal_prompt_conso.txt  orchestrator_prompt.txt  user_profile_prompt.txt
src/bitemate/prompts/meal_planner_prompts/: create_updater_prompt.txt  daily_meal_planner_prompt.txt  meal_preparation_prompt.txt  recipe_finder_prompt.txt  variety_check.txt
src/bitemate/prompts/user_profiler_prompts/: create_calculator_prompt.txt  create_profiler_prompt.txt  create_updater_prompt.txt  recipe_finder_prompt.txt  variety_check.txt
src/bitemate/tools/: bitemate_tools.py  mcp_client.py  temp_run_tool.py
src/bitemate/utils/: callbacks.py  params.py  prompt.py  retry_config.py  run_sessions.py
tests/: test_agent_pipelines.py  test_meal_generator.py  test_meal_planner.py  test_orchestrator.py  test_postgresql_save.py  test_router_agent.py
